--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Thanos Theodoridis">
-    <link rel="icon" href="../../favicon.ico">
+
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
     <title>Thanos Theodoridis</title>
 
