--- a/about/index.html
+++ b/about/index.html
@@ -27,19 +27,19 @@
     <div class="container">
       <div class="header clearfix">
         <nav>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img alt="Thanos Theodoridis" src="/images/logo.png">
             </a>
           <ul class="nav navbar-nav pull-right links">
             <li class="navbar-link"><a href="/">HOME</a></li>
-            <li class="navbar-link"><a href="#" class="active">ABOUT</a></li>
-            <li class="navbar-link"><a href="#">BLOG</a></li>
+            <li class="navbar-link"><a href="/about/" class="active">ABOUT</a></li>
+            <li class="navbar-link"><a href="/blog/">BLOG</a></li>
           </ul>
         </nav>
 
       </div>
   </div>
-    <div class="img-wide">
+    <div class="bg-image about-image">
     </div>
 
       <div class="container">
@@ -64,9 +64,9 @@
 
         <footer class="footer text-center">
           <ul class="list-inline">
-              <li><a href="/index.html">HOME</a></li>
-              <li><a class="active" href="">ABOUT</a></li>
-              <li><a href="">BLOG</a></li>
+              <li><a href="/">HOME</a></li>
+              <li><a class="active" href="/about/">ABOUT</a></li>
+              <li><a href="/blog/">BLOG</a></li>
           </ul>
           <div class="row">
               <div class="col-md-4 col-md-offset-4">
