--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,18 +29,17 @@
     <div class="container">
       <div class="header clearfix">
         <nav>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img alt="Thanos Theodoridis" src="/images/logo.png">
             </a>
           <ul class="nav navbar-nav pull-right links">
-            <li class="navbar-link"><a href="#" class="active">HOME</a></li>
-            <li class="navbar-link"><a href="#">ABOUT</a></li>
-            <li class="navbar-link"><a href="#">BLOG</a></li>
+            <li class="navbar-link"><a href="/" class="active">HOME</a></li>
+            <li class="navbar-link"><a href="/about/">ABOUT</a></li>
+            <li class="navbar-link"><a href="/blog/">BLOG</a></li>
           </ul>
         </nav>
 
       </div>
-
       <div class "row hello">
         <div class="col-md-8 col-md-offset-2">
             <div class="hero text-center">
@@ -47,13 +48,13 @@
                 <p>Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack,
 real deal. I like startups, beer and women. </p>
                 <ul class="list-inline social-icons">
-                    <li><a href=""><img alt="Facebook" src="/images/fbIcon.png"></a></li>
-                    <li><a href=""><img alt="Dribbble" src="/images/dribbbleIcon.png"></a></li>
-                    <li><a href=""><img alt="Skype" src="/images/skypeIcon.png"></a></li>
-                    <li><a href=""><img alt="LinkedIn" src="/images/linkedInIcon.png"></a></li>
-                    <li><a href=""><img alt="e-mail" src="/images/mailIcon.png"></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/attheodo"><img alt="Facebook" src="/images/fbIcon.png"></a></li>
+                    <li><a target="_blank" href="https://www.dribbble.com/attheodo"><img alt="Dribbble" src="/images/dribbbleIcon.png"></a></li>
+                    <li><a target="_blank" href="skype:theodoridis.thanos?chat"><img alt="Skype" src="/images/skypeIcon.png"></a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/attheodo"><img alt="LinkedIn" src="/images/linkedInIcon.png"></a></li>
+                    <li><a href="mailto:at@atworks.gr?subject=Hello!"><img alt="e-mail" src="/images/mailIcon.png"></a></li>
                 </ul>
-                <a class="btn btn-default btn-lg" href="#" role="button">Hire me for your next project</a>
+                <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project" role="button">Hire me for your next project</a>
 
             </div>
         </div>
@@ -88,7 +89,7 @@ real deal. I like startups, beer and women. </p>
                   <p>Let’s tame the technical debt, policies and workflow beasts together.</p>
               </div>
               <div class="col-md-4 tell-me-more-container">
-                  <a class="btn btn-default btn-lg" href="#" role="button">Tell me more</a>
+                  <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project" role="button">Tell me more</a>
               </div>
 
           </div>
@@ -96,9 +97,9 @@ real deal. I like startups, beer and women. </p>
 
       <footer class="footer text-center">
           <ul class="list-inline">
-              <li><a class="active" href="/index.html">HOME</a></li>
-              <li><a href="">ABOUT</a></li>
-              <li><a href="">BLOG</a></li>
+              <li><a class="active" href="/">HOME</a></li>
+              <li><a href="/about/">ABOUT</a></li>
+              <li><a href="/blog/">BLOG</a></li>
           </ul>
           <div class="row">
               <div class="col-md-4 col-md-offset-4">
