commented out links to /blog for now

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav pull-right links">
             <li class="navbar-link"><a href="/" class="active">HOME</a></li>
             <li class="navbar-link"><a href="/about/">ABOUT</a></li>
-            <li class="navbar-link"><a href="/blog/">BLOG</a></li>
+            <!--<li class="navbar-link"><a href="/blog/">BLOG</a></li>-->
           </ul>
         </nav>
 
@@ -99,7 +99,7 @@ real deal. I like startups, beer and women. </p>
           <ul class="list-inline">
               <li><a class="active" href="/">HOME</a></li>
               <li><a href="/about/">ABOUT</a></li>
-              <li><a href="/blog/">BLOG</a></li>
+              <!--<li><a href="/blog/">BLOG</a></li>-->
           </ul>
           <div class="row">
               <div class="col-md-4 col-md-offset-4">
