--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
-    <title>Thanos Theodoridis</title>
+    <title>Thanos Theodoridis Personal Website</title>
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900|Droid+Serif' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
