--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
 
       </div>
-      <div class "row hello">
+      <div class="row hello">
         <div class="col-md-8 col-md-offset-2">
             <div class="hero text-center">
                 <img alt="Thanos Theodoridis" src="/images/profile_pic.png">
