--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Home - Thanos Theodoridis - Software Engineer
 description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
 active: home
+quote: Success is walking from failure to failure with no loss of enthusiasm
 ---
 
 <div class="container">
