--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ quote: Success is walking from failure to failure with no loss of enthusiasm
 
         <h1>Hello. I am Thanos.</h1>
 
-        <p>Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack,
-          real deal. I like startups, beer and women. </p>
+        <p>Web and iOS hacker. UX/UI Designer. Generalist, full-stack,
+          real deal. On a mission to bring your mobile and web strategy into life. </p>
         <ul class="list-inline social-icons">
           <li><a target="_blank" href="https://www.facebook.com/attheodo"><img alt="Facebook" src="/images/fbIcon.png"></a>
           </li>
