some more positioning tweaks

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ quote: Success is walking from failure to failure with no loss of enthusiasm
   <div class="row">
     <div class="tech-lead col-md-10 col-md-offset-1">
       <div class="col-md-8 pitch-container">
-        <h4>Looking for a tech lead?</h4>
+        <h4>Looking for a product manager or tech lead?</h4>
 
-        <p>Let’s tame the technical debt, policies and workflow beasts together.</p>
+        <p>Let's talk on how we can increase the value of your business.</p>
       </div>
       <div class="col-md-4 tell-me-more-container">
         <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project"
