--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ quote: Success is walking from failure to failure with no loss of enthusiasm
       <div class="col-md-8 pitch-container">
         <h4>Looking for a product manager or tech lead?</h4>
 
-        <p>Let's talk on how we can increase the value of your business.</p>
+        <p>Let's talk on how we can increase the value of your business together.</p>
       </div>
       <div class="col-md-4 tell-me-more-container">
         <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project"
