copy changes, add github link

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ quote: Success is walking from failure to failure with no loss of enthusiasm
       <div class="hero text-center">
         <img alt="Thanos Theodoridis" src="/images/profile_pic.png">
 
-        <h1>Hello. I am Thanos.</h1>
+        <h1>Hello. My name is Thanos.</h1>
 
-        <p>Web and iOS hacker. UX/UI Designer. Generalist, full-stack,
+        <p>Senior iOS Developer. UX/UI Designer. Generalist, full-stack,
           real deal. On a mission to bring your mobile and web strategy into life. </p>
         <ul class="list-inline social-icons">
-          <li><a target="_blank" href="https://www.facebook.com/attheodo"><img alt="Facebook" src="/images/fbIcon.png"></a>
+          <li><a target="_blank" href="https://github.com/attheodo"><img alt="GitHub" src="/images/githubIcon.png"></a>
           </li>
           <li><a target="_blank" href="https://www.dribbble.com/attheodo"><img alt="Dribbble"
                                                                                src="/images/dribbbleIcon.png"></a></li>
@@ -40,29 +40,29 @@ quote: Success is walking from failure to failure with no loss of enthusiasm
 
     <div class="col-lg-4 text-center">
       <img alt="iOS Development" src="/images/iosServices.png">
-      <h4>iOS Applications</h4>
+      <h4>iOS Development</h4>
 
-      <p>Do you need help with a complex iOS app? I am your guy.</p>
+      <p>With 6+ years experience on the Apple platforms, I develop remarkable mobile experiences.</p>
     </div>
 
     <div class="col-lg-4 text-center">
-      <img alt="iOS Development" src="/images/uxServices.png">
+      <img alt="UX/UI Services" src="/images/uxServices.png">
       <h4>UX/UI design</h4>
 
-      <p>Do you need to put thought into how your product works? I am your guy.</p>
+      <p>High-value professional User Interface and Information Architecture services that drive KPIs up.</p>
     </div>
 
     <div class="col-lg-4 text-center">
-      <img alt="iOS Development" src="/images/devServices.png">
+      <img alt="Backend Development" src="/images/devServices.png">
       <h4>Backend Engineering</h4>
 
-      <p>You need an API, a web-app, or ready to scale? I am your guy.</p>
+      <p>Seasoned web engineer capable of implementing the backend infrastructure of mobile clients.</p>
     </div>
 
   </div>
 
   <div class="row">
-    <div class="tech-lead col-md-10 col-md-offset-1">
+    <div class="tech-lead col-md-12">
       <div class="col-md-8 pitch-container">
         <h4>Looking for a product manager or tech lead?</h4>
 
