--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home - Thanos Theodoridis - Software Engineer
-description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
+description: Hello. My name is Thanos.Senior iOS Developer. UX/UI Designer. Generalist, full-stack, real deal. On a mission to bring your mobile and web strategy into life.
 active: home
 quote: Success is walking from failure to failure with no loss of enthusiasm
 ---
