Replace images with FontAwesome in homepage social icons

--- a/index.html
+++ b/index.html
@@ -18,16 +18,31 @@ quote: Success is walking from failure to failure with no loss of enthusiasm
         <p>Senior iOS Developer. UX/UI Designer. Generalist, full-stack,
           real deal. On a mission to bring your mobile and web strategy into life. </p>
         <ul class="list-inline social-icons">
-          <li><a target="_blank" href="https://github.com/attheodo"><img alt="GitHub" src="/images/githubIcon.png"></a>
+          <li>
+            <a class="social-icon" target="_blank" href="https://github.com/attheodo">
+              <i class="fa fa-github"></i>
+            </a>
           </li>
-          <li><a target="_blank" href="https://www.dribbble.com/attheodo"><img alt="Dribbble"
-                                                                               src="/images/dribbbleIcon.png"></a></li>
-          <li><a target="_blank" href="skype:theodoridis.thanos?chat"><img alt="Skype" src="/images/skypeIcon.png"></a>
+          <li>
+            <a class="social-icon" target="_blank" href="https://www.dribbble.com/attheodo">
+              <i class="fa fa-dribbble"></i>
+            </a>
           </li>
-          <li><a target="_blank" href="https://www.linkedin.com/in/attheodo"><img alt="LinkedIn"
-                                                                                  src="/images/linkedInIcon.png"></a>
+          <li>
+            <a class="social-icon" target="_blank" href="skype:theodoridis.thanos?chat">
+              <i class="fa fa-skype"></i>
+            </a>
           </li>
-          <li><a href="mailto:at@atworks.gr?subject=Hello!"><img alt="e-mail" src="/images/mailIcon.png"></a></li>
+          <li>
+            <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/attheodo">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a class="social-icon" href="mailto:at@atworks.gr?subject=Hello!">
+              <i class="fa fa-send"></i>
+            </a>
+          </li>
         </ul>
         <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project"
            role="button">Hire me for your next project</a>
