new layout, who dis

--- a/index.html
+++ b/index.html
@@ -1,93 +1,74 @@
 ---
 layout: default
-title: Home - Thanos Theodoridis - Software Engineer
-description: Hello. My name is Thanos. Senior iOS Developer. UX/UI Designer. Generalist, full-stack, real deal. On a mission to bring your mobile and web strategy into life.
-active: home
-quote: Success is walking from failure to failure with no loss of enthusiasm
+title: Thanos Theodoridis
+description: Welcome to my personal assortment of projects and ideas.
 ---
 
-<div class="container">
-
-  <div class="row hello">
-    <div class="col-md-8 col-md-offset-2">
-      <div class="hero text-center">
-        <img alt="Thanos Theodoridis" src="/images/profile_pic.png">
-
-        <h1>Hello. My name is Thanos.</h1>
-
-        <p>Senior iOS Developer. UX/UI Designer. Generalist, full-stack,
-          real deal. On a mission to bring your mobile and web strategy into life. </p>
-        <ul class="list-inline social-icons">
-          <li>
-            <a class="social-icon" target="_blank" href="https://github.com/attheodo">
-              <i class="fa fa-github"></i>
-            </a>
-          </li>
-          <li>
-            <a class="social-icon" target="_blank" href="https://www.dribbble.com/attheodo">
-              <i class="fa fa-dribbble"></i>
-            </a>
-          </li>
-          <li>
-            <a class="social-icon" target="_blank" href="skype:theodoridis.thanos?chat">
-              <i class="fa fa-skype"></i>
-            </a>
-          </li>
-          <li>
-            <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/attheodo">
-              <i class="fa fa-linkedin"></i>
-            </a>
-          </li>
-          <li>
-            <a class="social-icon" href="mailto:at@atworks.gr?subject=Hello!">
-              <i class="fa fa-send"></i>
-            </a>
-          </li>
-        </ul>
-        <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project"
-           role="button">Hire me for your next project</a>
-
-      </div>
+<div>
+  <p class="text-gray-500 font-bold">
+    Hi, my name is <span class="text-brand-500">A</span>thanasios "Thanos"
+    <span class="text-brand-500">Th</span>eodoridis.
+  </p>
+  <p>Welcome to my personal assortment of projects and ideas.</p>
+</div>
+<div class="mt-10">
+  <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
+    <span class="text-brand-500">#</span><span>About</span>
+  </h1>
+  <div class="flex gap-8 mt-4">
+    <img src="assets/images/profile_pic.jpg" alt="" />
+    <div class="text-gray-400 text-sm space-y-4 leading-relaxed">
+      <p>
+        Technology professional with 15+ years of experience specializing in
+        Product Development. Dipl. Electrical Engineering / MSc Engineering
+        Management.
+      </p>
+      <p>
+        I have served multiple roles ranging from full-stack developer, lead iOS
+        engineer and Product Manager, testament to my true “builder” DNA.
+      </p>
+      <p>
+        Currently in deep vibe-coding mode – tinkering with the latest shiny web
+        tech and chasing fresh ideas.
+      </p>
+      <p>Living in Thessaloniki, Greece. Father of one.</p>
     </div>
   </div>
-
-  <div class="row services">
-
-    <div class="col-lg-4 text-center">
-      <img alt="iOS Development" src="/images/iosServices.png">
-      <h4>iOS Development</h4>
-
-      <p>With 6+ years experience on the Apple platforms, I develop remarkable mobile experiences.</p>
+  <div class="mt-10">
+    <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
+      <span class="text-brand-500">#</span><span>Purpose</span>
+    </h1>
+    <div class="text-gray-400 text-sm mt-2 leading-relaxed">
+      <p>
+        Fulfillment vs approval. I am here to enjoy life through my own lense,
+        not social molds. Ethics aren’t a constraint, they’re the design brief.
+        I seek to be kind and trustworthy.
+      </p>
     </div>
-
-    <div class="col-lg-4 text-center">
-      <img alt="UX/UI Services" src="/images/uxServices.png">
-      <h4>UX/UI design</h4>
-
-      <p>High-value professional User Interface and Information Architecture services that drive KPIs up.</p>
-    </div>
-
-    <div class="col-lg-4 text-center">
-      <img alt="Backend Development" src="/images/devServices.png">
-      <h4>Backend Engineering</h4>
-
-      <p>Seasoned web engineer capable of implementing the backend infrastructure of mobile clients.</p>
-    </div>
-
   </div>
-
-  <div class="row">
-    <div class="tech-lead col-md-12">
-      <div class="col-md-8 pitch-container">
-        <h4>Looking for a product manager or tech lead?</h4>
-
-        <p>Let's talk on how we can increase the value of your business together.</p>
-      </div>
-      <div class="col-md-4 tell-me-more-container">
-        <a class="btn btn-default btn-lg" href="mailto:at@atworks.gr?subject=Hello!%20Let's%20discuss%20a%20project"
-           role="button">Tell me more</a>
-      </div>
-
+  <div class="mt-10">
+    <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
+      <span class="text-brand-500">#</span><span>Connect</span>
+    </h1>
+    <div class="text-gray-400 text-sm mt-2 leading-relaxed">
+      <p>
+        You can connect with me on
+        <a href="https://x.com/attheodo" class="link">X</a>,
+        <a href="https://linkedin.com/in/attheodo" class="link">LinkedIn</a> or
+        via <a href="mailto:at@atworks.gr" class="link">Email</a>
+      </p>
+    </div>
+  </div>
+  <div class="mt-10">
+    <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
+      <span class="text-brand-500">#</span><span>Latest Activity</span>
+    </h1>
+    <div class="text-gray-400 text-sm mt-2 leading-relaxed">
+      <p class="mb-4">
+        Ocassionaly I open-source code on
+        <a href="https://github.com/attheodo" class="link">GitHub</a>
+      </p>
+      <img src="http://ghchart.rshah.org/attheodo" alt="Github chart" />
     </div>
   </div>
 </div>
