--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ description: Welcome to my personal assortment of projects and ideas.
     <span class="text-brand-500">#</span><span>About</span>
   </h1>
   <div class="flex gap-8 mt-4">
-    <img src="assets/images/profile_pic.jpg" alt="" />
+    <div class="group relative cursor-pointer max-w-[200px] w-full">
+      <img class="w-full rounded-lg group-hover:opacity-0" src="assets/images/profile_pic.jpg" alt="Thanos Theodoridis" />
+      <img class="w-full pointer-events-none absolute inset-0 rounded-lg opacity-0 group-hover:opacity-100" src="assets/images/profile_pic_color.jpg" alt="Thanos Theodoridis" />
+    </div>
     <div class="text-gray-400 text-sm space-y-4 leading-relaxed">
       <p>
         Technology professional with 15+ years of experience specializing in
