--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: Welcome to my personal assortment of projects and ideas.
   <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
     <span class="text-brand-500">#</span><span>About</span>
   </h1>
-  <div class="flex gap-8 mt-4">
+  <div class="flex flex-col md:flex-row gap-8 mt-4">
     <div class="group relative cursor-pointer max-w-[200px] w-full">
       <img class="w-full rounded-lg group-hover:opacity-0" src="assets/images/profile_pic.jpg" alt="Thanos Theodoridis" />
       <img class="w-full pointer-events-none absolute inset-0 rounded-lg opacity-0 group-hover:opacity-100" src="assets/images/profile_pic_color.jpg" alt="Thanos Theodoridis" />
