--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ description: Welcome to my personal assortment of projects and ideas.
 ---
 
 <div>
-  <p class="text-gray-500 font-bold">
+  <p class="text-gray-500 dark:dark:text-gray-300 font-bold">
     Hi, my name is <span class="text-brand-500">A</span>thanasios "Thanos"
     <span class="text-brand-500">Th</span>eodoridis.
   </p>
-  <p>Welcome to my personal assortment of projects and ideas.</p>
+  <p class="text-gray-500 dark:text-gray-300">Welcome to my personal assortment of projects and ideas.</p>
 </div>
 <div class="mt-10">
   <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
-    <span class="text-brand-500">#</span><span>About</span>
+    <span class="text-brand-500">#</span><span class="dark:text-gray-300">About</span>
   </h1>
   <div class="flex flex-col md:flex-row gap-8 mt-4">
     <div class="group relative cursor-pointer max-w-[200px] w-full">
@@ -39,7 +39,7 @@ description: Welcome to my personal assortment of projects and ideas.
   </div>
   <div class="mt-10">
     <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
-      <span class="text-brand-500">#</span><span>Purpose</span>
+      <span class="text-brand-500">#</span><span class="dark:text-gray-300">Purpose</span>
     </h1>
     <div class="text-gray-400 text-sm mt-2 leading-relaxed">
       <p>
@@ -51,7 +51,7 @@ description: Welcome to my personal assortment of projects and ideas.
   </div>
   <div class="mt-10">
     <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
-      <span class="text-brand-500">#</span><span>Connect</span>
+      <span class="text-brand-500">#</span><span class="dark:text-gray-300">Connect</span>
     </h1>
     <div class="text-gray-400 text-sm mt-2 leading-relaxed">
       <p>
@@ -64,7 +64,7 @@ description: Welcome to my personal assortment of projects and ideas.
   </div>
   <div class="mt-10">
     <h1 class="flex gap-2 text-2xl font-extrabold text-gray-500">
-      <span class="text-brand-500">#</span><span>Latest Activity</span>
+      <span class="text-brand-500">#</span><span class="dark:text-gray-300">Latest Activity</span>
     </h1>
     <div class="text-gray-400 text-sm mt-2 leading-relaxed">
       <p class="mb-4">
